<resources>
    <string name="app_name">JOYLauncher</string>
    <string name="msg_failed_got_info">Failed to get version info of application from Service.</string>
    <string name="msg_has_updates">New version available,current {0}，new version is {1}。</string>
    <string name="msg_updated_version_info">"Newest version. Don't need to update."</string>
    <string name="title_software_update">Software update.</string>
    <string name="prompt_to_update">New version found, update?</string>
    <string name="caption_to_update_version">Update</string>
    <string name="caption_to_update_version_later">Later</string>
    <string name="msg_downloaded_and_installing">New version downloaded, installing。。。</string>
    <string name="title_updating">Updating。。。</string>
    <string name="caption_negative">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="title_recommend">首页</string>
    <string name="title_movie">影视</string>
    <string name="title_entertainment">娱乐</string>
    <string name="title_service">服务</string>
    <string name="title_application">应用</string>
    <string name="title_setting">设置</string>
    <string name="exit_dialog">退出提示</string>
    <string name="exit_dialog_mesg">确定要退出本应用吗</string>
    <string name="positive_button">确定</string>
    <string name="negative_button">取消</string>
    <string name="description_top_bar">顶部状态栏</string>
    <string name="description_sound_icon">声音状态图标</string>
    <string name="description_net_icon">网络状态图标</string>
    <string name="description_usb_icon">usb状态图标</string>
    <string name="description_bottom_menu_bg">主菜单背景</string>
    <string name="description_arrow_right">右箭头</string>
    <string name="description_arrow_left">左箭头</string>
    <string name="description_bottom_menu_icon">主菜单图标</string>
    <string name="description_bottom_menu_name_bg">主菜单名称背景</string>
    <string name="description_mid_menu_icon">二级菜单图标</string>
    <string name="description_mid_menu_bg">二级菜单背景</string>
    <string name="description_mid_app_icon">应用图标</string>
    <string name="description_news_bg">新闻背景</string>
    <string name="setting_weather">设置天气</string>
    <string name="author_dialog_title">提示</string>
    <string name="author_dialog_msg">该机顶盒暂未得到授权，请联系经销商！</string>
    <string name="add_app">添加应用</string>
    <string name="delete_app">删除应用</string>
    <string name="weather_setting">天气设置</string>
    <string name="system_setting">系统设置</string>
    <string name="personal_setting">个性化设置</string>
    <string name="taijie_tv">泰捷</string>
    <string name="tengxun_tv">腾讯视频</string>
    <string name="leshi_tv">乐视视频</string>
    <string name="youku_tv">优酷视频</string>
    <string name="boyinyue">博音乐</string>
    <string name="qqmusic">QQ音乐</string>
    <string name="kuwo">酷我音乐</string>
    <string name="fanqie_tv">番茄视频</string>
    <string name="live_tv">直播</string>
    <string name="back_tv">回看</string>
    <string name="ali_tv">阿狸直播</string>
    <string name="software_not_installed">您的软件还没安装，请先安装</string>
    <string name="welcome">欢迎光临</string>
    <string name="app_list">应用列表</string>
    <string name="del_app">长按删除APP</string>
    <string name="myapps">我的应用</string>
    <string name="province_city">省/直辖市</string>
    <string name="city_xian">市/县</string>
    <string name="sure">确定</string>
</resources>
