<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/sound_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30.0dip"
        android:layout_marginTop="30.0dip"
        android:contentDescription="@string/description_sound_icon"
        android:src="@drawable/sound_icon_1" />

    <ImageView
        android:id="@+id/net_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="30.0dip"
        android:layout_toLeftOf="@id/sound_icon"
        android:contentDescription="@string/description_net_icon"
        android:src="@drawable/net_icon_1" />

    <ImageView
        android:id="@+id/usb_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="30.0dip"
        android:layout_toLeftOf="@id/net_icon"
        android:contentDescription="@string/description_usb_icon"
        android:src="@drawable/usb_icon_0" />

    <TextView
        android:id="@+id/weather_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="25.0dip"
        android:text="@string/setting_weather"
        android:layout_toLeftOf="@+id/usb_icon"
        android:textSize="20.0sp" />
</RelativeLayout>
