<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:textSize="24.0sp"
        android:textStyle="bold"
        android:textColor="@color/blueviolet"
        android:id="@+id/province"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:text="@string/province_city" />

    <Spinner android:id="@+id/province_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:layout_toRightOf="@id/province" />

    <TextView android:textSize="24.0sp"
        android:textStyle="bold"
        android:textColor="@color/blueviolet"
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:text="@string/city_xian"
        android:layout_toRightOf="@id/province_spinner" />

    <Spinner android:id="@+id/city_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/city"
        android:layout_alignTop="@id/province_spinner" />

    <Button android:id="@+id/query_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:layout_below="@id/province_spinner"
        android:layout_alignRight="@id/city_spinner" />

</RelativeLayout>